arreglando estrategia de seleccion, todavia no funciona